chore(package): migrate scripts from Bun to npm
- Replace 'bun run --bun' with standard npm commands
- Replace 'bunx' with 'npx' in all scripts
- Update dev, build, and start scripts to use npm
- Update database scripts to use npx
- Change Prisma seed command from 'bun' to 'tsx'
- Move prisma from dependencies to devDependencies
- Add inngest dependency
- Generate package-lock.json for npm dependency resolution

--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bun run --bun next dev",
-    "build": "bun run db:generate && bun run --bun next build",
-    "start": "bun run --bun next start",
-    "lint": "bunx eslint",
-    "type-check": "bunx tsc --noEmit",
-    "postinstall": "bunx prisma generate",
-    "db:generate": "bunx prisma generate",
-    "db:migrate": "bunx prisma migrate dev",
-    "db:migrate:deploy": "bunx prisma migrate deploy",
-    "db:migrate:reset": "bunx prisma migrate reset",
-    "db:push": "bunx prisma db push",
-    "db:pull": "bunx prisma db pull",
-    "db:seed": "bunx prisma db seed",
-    "db:studio": "bunx prisma studio",
-    "db:format": "bunx prisma format",
-    "db:validate": "bunx prisma validate"
+    "dev": "next dev",
+    "build": "npm run db:generate && next build",
+    "start": "next start",
+    "lint": "npx eslint .",
+    "type-check": "npx tsc --noEmit",
+    "postinstall": "npx prisma generate",
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate dev",
+    "db:migrate:deploy": "npx prisma migrate deploy",
+    "db:migrate:reset": "npx prisma migrate reset",
+    "db:push": "npx prisma db push",
+    "db:pull": "npx prisma db pull",
+    "db:seed": "npx prisma db seed",
+    "db:studio": "npx prisma studio",
+    "db:format": "npx prisma format",
+    "db:validate": "npx prisma validate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -62,12 +62,12 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.48.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
-    "prisma": "^7.2.0",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
@@ -90,12 +90,13 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "prisma": {
-    "seed": "bun prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
