--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@e2b/code-interpreter": "^2.3.3",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/agent-kit": "^0.13.2",
+    "@paper-design/shaders-react": "^0.0.68",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -70,12 +70,14 @@
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
-    "react-resizable-panels": "^4.0.15",
+    "react-resizable-panels": "^2.1.9",
+    "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
@@ -88,6 +90,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
