--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "db:validate": "npx prisma validate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.5",
+    "@clerk/themes": "^2.4.46",
     "@e2b/code-interpreter": "^2.3.3",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/agent-kit": "^0.13.2",
@@ -65,6 +67,8 @@
     "@trpc/next": "^11.8.0",
     "@trpc/server": "^11.8.0",
     "@trpc/tanstack-react-query": "^11.8.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -75,6 +79,7 @@
     "inngest": "^3.48.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
+    "motion": "^12.23.26",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
